samples/_failures_safe/1761545006_ba2858_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cea500a.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_7cea500a.c:147:9: error: expected declaration or statement at end of input
  147 |         return names[state];
      |         ^~~~~~
./samples/SAFE/__tmp_7cea500a.c:147:9: error: expected declaration or statement at end of input
